<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/icon_cart"
                    android:tint="@color/accent" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:src="@drawable/icon_cart_text"
                    android:tint="@color/accent" />
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_login_user" />

            <EditText
                android:id="@+id/etLoginUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_login_pass" />

            <EditText
                android:id="@+id/etLoginClave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true" />

            <Button
                android:id="@+id/btLoginIngresar"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginTop="20dp"
                android:background="@color/accent"
                android:text="@string/app_login_btn"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>