<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvItemPedidoDetalleProductoNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nombre producto"
                android:textColor="@color/primary_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:layout_marginTop="3dp"
                android:text="@string/app_ncliente_tilPNombre"
                android:textColor="@color/secondary_text"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tvItemPedidoDetalleProductoDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Descripcion del producto"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/app_ncliente_tilPDescripcion"
                android:textColor="@color/secondary_text"
                android:textSize="11sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvItemPedidoDetalleCantidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="2dp"
                android:gravity="right"
                android:text="@string/app_dpedido_tvCantidad"
                android:textColor="@color/secondary_text"
                android:textSize="11sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvItemProductoMoneda"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:text="S/"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvItemPedidoDetalleProductoPrecio"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="1.00"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="right"
                android:text="@string/app_ncliente_tilPPrecioUnitario"
                android:textColor="@color/secondary_text"
                android:textSize="11sp" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />
</LinearLayout>